# SEMapp

./: README.md  main.py  pyproject.toml  requirements.txt
Layout/: __init__.py  create_button.py  main_window_att.py  settings.py  styles.py
Plot/: __init__.py  frame_attributes.py  styles.py  utils.py
Processing/: __init__.py  processing.py
